# outpost-camera-merge

./: PLAN.md  README.md  pyproject.toml
file-for-esp32/: README.md
file-for-esp32/circle_test/: circle_test.ino
file-for-esp32/no_rotation/: no_rotation.ino
file-for-esp32/outpost_display/: config.h  led_driver.cpp  led_driver.h  outpost_display.ino
file-for-pico/: README.md  outpost_motor.ino
outpost/: __init__.py  buffers.py  config.py  fusion.py  main.py
src/: __init__.py  buffers.py  cameras.json  config.py  fusion.py  main.py  models.py  motor.py  receiver.py  sender.py  skeleton.py  validator.py  visualize.py
tests/: __init__.py  conftest.py  helpers.py  test_buffers.py  test_config_models.py  test_fusion.py  test_integration.py  test_receiver.py  test_validator.py  test_visualize.py
tools/: ingest_monitor.py  mock_display.py  mock_phones.py  phone_sender.py  pose_factory.py
