[project]
name = "outpost-camera-merge"
version = "0.1.0"
requires-python = ">=3.11"
description = "Laptop pose fusion node: UDP ingest from phones → sync/fuse → display Pi"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
phone = ["mediapipe>=0.10.0", "opencv-python>=4.8.0"]
viz = ["matplotlib>=3.8"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["outpost"]

[tool.setuptools.package-dir]
outpost = "src"

[tool.setuptools.package-data]
outpost = ["cameras.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
