[project]
name = "outpost-camera-merge"
version = "0.2.0"
requires-python = ">=3.11"
description = "Low-latency MediaPipe landmark validation and ESP32 forwarding node"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
phone = ["mediapipe>=0.10.0", "opencv-python>=4.8.0"]
viz = ["matplotlib>=3.7.0"]
motor = ["pyserial>=3.5"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["outpost"]

[tool.setuptools.package-dir]
outpost = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
